# webapp-rs

./: .gitignore  readme.md
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  main.rs  models.rs  state.rs
webapp/static/: register.html  teachers.html
webservice/: Cargo.toml
webservice/sql/: course.sql  courses.sql
webservice/src/: db_access.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  dbinit.rs  mod.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
