[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.0"
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"
