[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.0"
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-actix-rustls", "chrono", "json", "macros"] }
tokio = { version = "1.25.0", features = ["full"] }

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"
